[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "blacksheep-log-id"
version = "0.1.0"
description = ""
authors = [
    {name = "q0w", email = "43147888+q0w@users.noreply.github.com"},
]
dependencies = [
    "blacksheep~=1.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool.pdm]
package-dir = "src"
